remove contentlayer and configured mdx

--- a/docs/c-programming/introduction.mdx
+++ b/docs/c-programming/introduction.mdx
@@ -1,7 +1,11 @@
----
-title: "Introduction to C Programming"
-description: "Learn the fundamentals of C programming, its history, and why it's still widely used today."
----
+export const seo = {
+  title: 'Rust is Eating JavaScript',
+  description:
+    'Why is Rust being used to replace parts of the JavaScript web ecosystem like minification (Terser), transpilation (Babel), formatting (Prettier), bundling (webpack), linting (ESLint), and more?',
+  alternates: {
+    canonical: '/n/rust',
+  },
+};
 
 import CodeBlock from "@/components/mdx/code-block";
 import Quiz from "@/components/mdx/quiz";
