--- a/content/doc/introduction.mdx
+++ b/content/doc/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction to C Programming"
 description: "Learn the fundamentals of C programming, its history, and why it's still widely used today."
+date: 2023-10-2
 ---
 
 import CodeBlock from "@/components/mdx/code-block";
