fixed linting errors

--- a/content/doc/control-flow.mdx
+++ b/content/doc/control-flow.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Control Flow in C"
-description: "Learn how to control the execution flow in C using conditional statements and loops."
-date: 2023-10-2
+title: Control Flow in C
+description: Learn how to control the execution flow in C using conditional statements and loops.
 ---
 
 
