--- a/content/doc/operators.mdx
+++ b/content/doc/operators.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Operators in C"
-description: "Learn about different types of operators in C programming and how they are used in expressions."
-date: 2023-10-2
+title: Operators in C
+description: Learn about different types of operators in C programming and how they are used in expressions.
 ---
 
 
