--- a/content/doc/variable-and-data-types.mdx
+++ b/content/doc/variable-and-data-types.mdx
@@ -1,7 +1,6 @@
 ---
-title: "C Variables and Data Types"
-description: "Learn about variables, data types, and memory usage in C programming."
-date: 2023-10-2
+title: C Variables and Data Types
+description: Learn about variables, data types, and memory usage in C programming.
 ---
 
 import CodeBlock from "@/components/mdx/code-block";
