--- a/content/programming/introduction.mdx
+++ b/content/programming/introduction.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Introduction to C Programming"
-description: "Learn the fundamentals of C programming, its history, and why it's still widely used today."
-date: 2023-10-2
+title: Introduction to C Programming
+description: Learn the fundamentals of C programming, its history, and why it's still widely used today.
 ---
 
 # Introduction to C Programming 🚀
