fixed JSON parse error comming from contentlayer

--- a/content/doc/control-flow.mdx
+++ b/content/doc/control-flow.mdx
@@ -1,11 +1,8 @@
 ---
 title: Control Flow in C
 description: Learn how to control the execution flow in C using conditional statements and loops.
+author: CSExplore Team
 ---
-
-
-import CodeBlock from "@/components/mdx/code-block";
-import Quiz from "@/components/mdx/quiz";
 
 # Control Flow in C 🚦
 
@@ -148,17 +145,6 @@ int main() {
 }`
 }
 </CodeBlock>
-
-## Quick Quiz 🧠
-<Quiz question="Which loop always executes at least once?"
-      options={{
-        a: "for loop",
-        b: "while loop",
-        c: "do-while loop",
-        d: "switch statement"
-      }}
-      answer="c"
-/>
 
 ---
 
