--- a/content/doc/operators.mdx
+++ b/content/doc/operators.mdx
@@ -1,11 +1,8 @@
 ---
 title: Operators in C
 description: Learn about different types of operators in C programming and how they are used in expressions.
+author: CSExplore Team
 ---
-
-
-import CodeBlock from "@/components/mdx/code-block";
-import Quiz from "@/components/mdx/quiz";
 
 # Operators in C ⚡
 
@@ -160,28 +157,6 @@ int main() {
 }`
 }
 </CodeBlock>
-
-## Quick Quiz 🧠
-
-<Quiz question="Which operator is used to check equality in C?"
-      options={{
-        a: "=",
-        b: "==",
-        c: "!=",
-        d: "=>"
-      }}
-      answer="b"
-/>
-
-<Quiz question="What is the output of `5 % 2`?"
-      options={{
-        a: "2",
-        b: "0",
-        c: "1",
-        d: "5"
-      }}
-      answer="c"
-/>
 
 ---
 
