--- a/content/doc/variable-and-data-types.mdx
+++ b/content/doc/variable-and-data-types.mdx
@@ -1,10 +1,8 @@
 ---
 title: C Variables and Data Types
 description: Learn about variables, data types, and memory usage in C programming.
+author: CSExplore Team
 ---
-
-import CodeBlock from "@/components/mdx/code-block";
-import Quiz from "@/components/mdx/quiz";
 
 # C Variables and Data Types 📝
 
@@ -164,27 +162,6 @@ int main() {
 ```
 The area of the circle is: 78.537500
 ```
-
-## Quick Quiz 🧠
-<Quiz question="Which data type is used to store decimal values in C?"
-      options={{
-        a: "int",
-        b: "char",
-        c: "float",
-        d: "void"
-      }}
-      answer="c"
-/>
-
-<Quiz question="What is the keyword to declare a constant in C?"
-      options={{
-        a: "final",
-        b: "constant",
-        c: "const",
-        d: "define"
-      }}
-      answer="c"
-/>
 
 ---
 
