--- a/content/programming/introduction.mdx
+++ b/content/programming/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Introduction to C Programming
 description: Learn the fundamentals of C programming, its history, and why it's still widely used today.
+author: CSExplore Team
 ---
 
 # Introduction to C Programming 🚀
