- Modified the landing page and keep only usefull thing and other will   removed. - Added a sidebar components from the shadcn ui - structured some basic mdx layout and style but not completed - Also modified some courses pages

--- a/content/c/02-variable-and-data-types.mdx
+++ b/content/c/02-variable-and-data-types.mdx
@@ -9,7 +9,7 @@ author: CSExplore Team
 ## What are Variables? 🤔
 A **variable** in C is a name given to a memory location where data is stored. Every variable has a **data type**, which determines the kind of value it can store.
 
-### **Declaring and Initializing Variables**
+## **Declaring and Initializing Variables**
 Variables in C must be declared before use. The general syntax is:
 
 <CodeBlock language="c">
